[tool.poetry]
name = "chatterino2"
version = "0.0.0"
description = ""
authors = ["fruzitent <fruzit@gmail.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
black = "^23.9.1"
flake8-pyproject = "^1.2.3"
wemake-python-styleguide = "^0.18.0"

[tool.poetry.group.typing]
optional = true

[tool.poetry.group.typing.dependencies]
mypy = "^1.5.1"
types-jsonschema = "^4.19.0.3"

[tool.poetry.dependencies]
python = "^3.11"
catppuccin = "^1.3.2"
jsonschema = "^4.19.1"

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#command-line-options
line-length = 120

[tool.flake8]
# https://wemake-python-styleguide.readthedocs.io/en/latest/pages/usage/violations/index.html
ignore = [
  "D100",   # D100 Missing docstring in public module
  "D101",   # D101 Missing docstring in public class
  "D103",   # D103 Missing docstring in public function
  "WPS210", # WPS210 Found too many local variables
  "WPS237", # WPS237 Found a too complex `f` string
  "WPS305", # WPS305 Found `f` string
]
inline-quotes = "double"
max-line-length = 120
per-file-ignores = [
  # S310 Audit url open for permitted schemes.
  # WPS226 Found string literal over-use
  # WPS339 Found number with meaningless zeros
  "src/main.py:S310,WPS226,WPS339",
]
show-violation-links = true

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
line_length = 120
profile = "black"

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
strict = true
