#:schema https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/pyproject.json
# @help: https://packaging.python.org/en/latest/specifications/pyproject-toml

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools==69.0.2", "setuptools_scm==8.0.4"]

[project]
authors = [{ email = "fruzit@gmail.com", name = "fruzitent" }]
# @see: https://pypi.org/classifiers
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Topic :: Communications :: Chat :: Internet Relay Chat",
]
dependencies = ["catppuccin==2.2.0", "jsonschema==4.19.1"]
description = "💬 Soothing pastel theme for Chatterino 2"
dynamic = ["version"]
license.file = "LICENSE"
name = "catppuccin-chatterino2"
readme = "README.md"
requires-python = ">=3.11"

[project.gui-scripts]

[project.scripts]

[project.optional-dependencies]
dev = ["catppuccin-chatterino2[format,typing]"]
format = [
  "black==23.9.1",
  "flake8-pyproject==1.2.3",
  "wemake-python-styleguide==0.18.0",
]
typing = ["mypy==1.5.1", "types-jsonschema==4.19.0.3"]

[project.urls]
repository = "git+https://github.com/catppuccin/chatterino2.git"

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#command-line-options
line-length = 120

[tool.flake8]
# https://wemake-python-styleguide.readthedocs.io/en/latest/pages/usage/violations/index.html
ignore = [
  "D100",   # D100 Missing docstring in public module
  "D101",   # D101 Missing docstring in public class
  "D103",   # D103 Missing docstring in public function
  "WPS210", # WPS210 Found too many local variables
  "WPS237", # WPS237 Found a too complex `f` string
  "WPS305", # WPS305 Found `f` string
]
inline-quotes = "double"
max-line-length = 120
per-file-ignores = [
  # S310 Audit url open for permitted schemes.
  # WPS226 Found string literal over-use
  # WPS339 Found number with meaningless zeros
  "src/main.py:S310,WPS226,WPS339",
]
show-violation-links = true

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
line_length = 120
profile = "black"

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
strict = true

[tool.setuptools_scm]
